фиксим сообщения об ошибках

--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -96,6 +96,11 @@
                                                         </select>
                                                     </td>
                                                 </tr>
+                                                <tr>
+                                                    <td>
+                                                        <div id="exceptionFieldX" class="exception" style="font-size: 20px; color: magenta; font-family: Cursive"></div>
+                                                    </td>
+                                                </tr>
                                             </table>
                                         </td>
                                     </tr>
@@ -112,6 +117,11 @@
                                                         <input id="yTextField" class="selectingAreas" type="text" name="y"
                                                                tabindex="3"
                                                                placeholder="(-5;3)">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <div id="exceptionFieldY" class="exception" style="font-size: 20px; color: magenta; font-family: Cursive"></div>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -188,14 +198,19 @@
                                             </span>
                                                     </td>
                                                 </tr>
+                                                <tr>
+                                                    <td>
+                                                        <div id="exceptionFieldR" class="exception" style="font-size: 20px; color: magenta; font-family: Cursive"></div>
+                                                    </td>
+                                                </tr>
                                             </table>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <span id="exceptionFieldX"></span>
-                                            <span id="exceptionFieldY"></span>
-                                            <span id="exceptionFieldR"></span>
+                                            <!--<span id="exceptionFieldX"></span>-->
+                                           <!-- <span id="exceptionFieldY"></span>-->
+                                            <!--<span id="exceptionFieldR"></span>-->
                                         </td>
                                     </tr>
                                     <tr class="paddingEl">
