--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My Second Web Lab ^. .^ &#129293;</title>
+    <title>My II Web Lab ^. .% &#129293;</title>
     <link rel="stylesheet" href="new_style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
