filters in process

--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -66,7 +66,7 @@
                                     <polygon points="600,300 595,305 595, 295" fill="black" stroke="black"></polygon>
                                     <polygon points="300,0 295,5 305,5" fill="black" stroke="black"></polygon>
 
-                                    <!-- ипо точки -->
+                                    <!-- типо точки -->
                                     <circle id="point" r="5" cx="150" cy="150"
                                             fill-opacity="0.7" fill="cyan" stroke="cyan" visibility="hidden"></circle>
                                 </svg>
