попытка добавить элемент к свг(

--- a/lab2_jakarta/src/main/webapp/index.html
+++ b/lab2_jakarta/src/main/webapp/index.html
@@ -28,7 +28,7 @@
                                 <!--<canvas id="graph" width="650" height="650">
                                     <p>Ваш браузер не поддерживает рисование.</p>
                                 </canvas>-->
-                                <svg width="600" height="600" id="picture">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="600" height="600" id="picture">
                                     <!-- задаем прямоугольник-->
                                     <rect x="60" y="300" width="240" height="120" fill-opacity="0.7" stroke="#424379"
                                           fill="#424379"></rect>
