OMG точка добавляется!!!

--- a/lab2_jakarta/src/main/webapp/index.html
+++ b/lab2_jakarta/src/main/webapp/index.html
@@ -69,6 +69,18 @@
                                     <!-- типо точки -->
                                     <circle id="point" r="5" cx="150" cy="150"
                                             fill-opacity="0.7" fill="cyan" stroke="cyan" visibility="hidden"></circle>
+                                    <!--<script>
+                                        let ns = "http://www.w3.org/2000/svg"
+                                        //let svg = document.createElementNS(ns, 'svg');
+                                        let svg = document.getElementById('picture');
+                                        let circle = document.createElementNS(ns, 'circle');
+                                        circle.setAttribute('r', 50)
+                                        circle.setAttribute('cx', 60)
+                                        circle.setAttribute('cy', 60)
+                                        circle.setAttribute('fill', 'wheat')
+                                        svg.append(circle);
+                                        document.body.append(svg);
+                                    </script>-->
                                 </svg>
                             </td>
                             <td>
