сломалась очистка области точек(

--- a/lab2_jakarta/src/main/webapp/index.html
+++ b/lab2_jakarta/src/main/webapp/index.html
@@ -67,8 +67,8 @@
                                     <polygon points="300,0 295,5 305,5" fill="black" stroke="black"></polygon>
 
                                     <!-- типо точки -->
-                                    <circle id="point" r="5" cx="150" cy="150"
-                                            fill-opacity="0.7" fill="darkmagenta" stroke="magenta" visibility="hidden"></circle>
+                                    <!--<circle id="point" r="5" cx="150" cy="150"
+                                            fill-opacity="0.7" fill="darkmagenta" stroke="magenta" visibility="hidden"></circle>-->
                                 </svg>
                             </td>
                             <td>
