start page in process...

--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -5,7 +5,22 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
+<!--<f:view>
     <h:outputLabel value="Hello, world"/>
-</f:view>
+</f:view>-->
+<h:head>
+    <title>Web3</title>
+    <h:outputScript library="scripts" name="clock.js"/>
+</h:head>
+<h:body>
+    <table>
+        <tr>
+            <td>Нечаева Анна Анатольевна R3238</td>
+        </tr>
+        <tr>
+            <td>Вариант 78656</td>
+        </tr>
+    </table>
+    <div id="clock"></div>
+</h:body>
 </html>
