--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -11,8 +11,9 @@
 <h:head>
     <title>Web3</title>
     <h:outputScript library="scripts" name="clock.js"/>
+    <h:outputStylesheet library="style" name="startPageStyle.css"  />
 </h:head>
-<h:body>
+<h:body styleClass="bodyIm">
     <table>
         <tr>
             <td>Нечаева Анна Анатольевна R3238</td>
