часы обновляются каждые 10 секунд

--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" >
 <!--<f:view>
     <h:outputLabel value="Hello, world"/>
 </f:view>-->
@@ -13,7 +13,7 @@
     <h:outputScript library="scripts" name="clock.js"/>
     <h:outputStylesheet library="style" name="startPageStyle.css"  />
 </h:head>
-<h:body styleClass="bodyIm">
+<h:body>
     <table>
         <tr>
             <td>Нечаева Анна Анатольевна R3238</td>
