часы и дата корректные, работаю над дизайном стартовой страницы

--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -14,7 +14,7 @@
     <h:outputStylesheet library="style" name="startPageStyle.css"  />
 </h:head>
 <h:body>
-    <table>
+    <table id="headTable">
         <tr>
             <td>Нечаева Анна Анатольевна R3238</td>
         </tr>
