start page done

--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -22,6 +22,9 @@
             <td>Вариант 78656</td>
         </tr>
     </table>
-    <div id="clock"></div>
+    <div >
+        <p id="date"></p>
+        <p id="clock"></p>
+    </div>
 </h:body>
 </html>
