--- a/Lab_3/demo/src/main/webapp/index.xhtml
+++ b/Lab_3/demo/src/main/webapp/index.xhtml
@@ -26,5 +26,10 @@
         <p id="date"></p>
         <p id="clock"></p>
     </div>
+    <div id="toApplication">
+        <h:form>
+            <h:commandLink action="app" value="Приложение"/>
+        </h:form>
+    </div>
 </h:body>
 </html>
