--- a/Lab_3/demo/src/main/webapp/app.xhtml
+++ b/Lab_3/demo/src/main/webapp/app.xhtml
@@ -5,7 +5,18 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+
+<h:head>
+<title>Web3</title>
+<h:outputScript library="scripts" name="application.js"/>
+<h:outputStylesheet library="style" name="appPageStyle.css"  />
+</h:head>
+
+<h:body>
+<div id="toMain">
+    <h:form>
+        <h:commandLink action="index" value="Главная"/>
+    </h:form>
+</div>
+</h:body>
 </html>
