app page in process

--- a/Lab_3/demo/src/main/webapp/app.xhtml
+++ b/Lab_3/demo/src/main/webapp/app.xhtml
@@ -13,10 +13,18 @@
 </h:head>
 
 <h:body>
-<div id="toMain">
-    <h:form>
-        <h:commandLink action="index" value="Главная"/>
-    </h:form>
-</div>
+    <div id="toStart">
+        <h:form>
+            <h:commandLink action="index" value="Главная" styleClass="newCommandLink"/>
+        </h:form>
+    </div>
+    <div>
+        <h:form id="form">
+            <div id="xInput">
+                
+            </div>
+        </h:form>
+    </div>
+
 </h:body>
 </html>
