--- a/Lab_3/demo/src/main/webapp/app.xhtml
+++ b/Lab_3/demo/src/main/webapp/app.xhtml
@@ -19,9 +19,12 @@
         </h:form>
     </div>
     <div>
+
+    </div>
+    <div>
         <h:form id="form">
             <div id="xInput">
-                
+
             </div>
         </h:form>
     </div>
