--- a/Lab_3/demo/src/main/webapp/app.xhtml
+++ b/Lab_3/demo/src/main/webapp/app.xhtml
@@ -3,8 +3,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ace="http://www.icefaces.org/icefaces/components">
 
 <h:head>
 <title>Web3</title>
@@ -24,7 +26,35 @@
     <div>
         <h:form id="form">
             <div id="xInput">
-
+                <h:inputText a:placeholder="(-5 ... 5)" id="xInputHolder"/>
+            </div>
+            <div id="yInput">
+                <h:commandLink value="-4" id="y-4"/>
+                <br/>
+                <h:commandLink value="-3" id="y-3"/>
+                <br/>
+                <h:commandLink value="-2" id="y-2"/>
+                <br/>
+                <h:commandLink value="-1" id="y-1"/>
+                <br/>
+                <h:commandLink value="0" id="y0"/>
+                <br/>
+                <h:commandLink value="1" id="y1"/>
+                <br/>
+                <h:commandLink value="2" id="y2"/>
+                <br/>
+                <h:commandLink value="3" id="y3"/>
+                <br/>
+                <h:commandLink value="4" id="y4"/>
+            </div>
+            <div id="rInput">
+                <ace:sliderEntry id="widthEntry"
+                                 clickableRail = "true"
+                                 min="0"
+                                 max="15"
+                                 stepPercent="1">
+                    <ace:ajax event="slideEnd" execute="@this" render="@all"/>
+                </ace:sliderEntry>
             </div>
         </h:form>
     </div>
